# project-argus

./: .env.example  .gitignore  Argus_CdC_v1.0.docx  Cahier_des_charges_PromptShield.docx  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_manuel.py  test_offline.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml  securite.yml
agent/: __init__.py  agent.py  tools.py
data/docs_pieges/: doc_rh_piege.txt  page_web_piege.txt  reunion_obfusque.txt  ticket_support_piege.txt
data/docs_sains/: note_conges.txt  politique_securite.txt  rapport_activite.txt
docs/: ARCHITECTURE.md  ETAT_DE_LART.md
interface/: demo.py  rapport.py
logs/: rapport_session.html
middleware/: __init__.py  argus.py  coherence_checker.py  fingerprint_guard.py  intent_capture.py  llm_client.py  rules.json  rules_engine.py  text_normalizer.py
tests/: benchmark.py  test_argus.py  test_fingerprint_guard.py  test_rules_engine.py  test_text_normalizer.py
